fix(tooltip): enhance arrow positioning logic and update CSS variable for arrow alignment

--- a/src/components/tags/tooltip/tooltip.scss
+++ b/src/components/tags/tooltip/tooltip.scss
@@ -16,7 +16,7 @@
 
   &::after {
     position: absolute;
-    left: 50%;
+    left: var(--_arrow-left, 50%);
     content: '';
   }
 
